kyverno/policies/block-privileged-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-privileged-containers
  annotations:
    policies.kyverno.io/title: Block Privileged Containers
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Privileged mode disables most security mechanisms and must not be allowed.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: priviledged-containers
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - government-api
                - loan-validator-portal
                - database
                - observability
      validate:
        message: "Privileged mode is not allowed. Set privileged to false"
        pattern:
          spec:
            =(ephemeralContainers):
              - =(securityContext):
                  =(privileged): false
            =(initContainers):
              - =(securityContext):
                  =(privileged): false
            containers:
              - =(securityContext):
                  =(privileged): false
