kyverno/policies/drop-all-capabilities.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: drop-all-capabilities
  annotations:
    policies.kyverno.io/title: Drop All Capabilities
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Containers should drop all capabilities and add only those required.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: drop-all-capabilities
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - government-api
                - loan-validator-portal
                - observability
      validate:
        message: "All capabilities must be dropped"
        pattern:
          spec:
            =(ephemeralContainers):
              - securityContext:
                  capabilities:
                    drop:
                      - ALL
            =(initContainers):
              - securityContext:
                  capabilities:
                    drop:
                      - ALL
            containers:
              - securityContext:
                  capabilities:
                    drop:
                      - ALL
