kyverno/policies/require-read-only-root-filesystem.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-read-only-root-filesystem
  annotations:
    policies.kyverno.io/title: Require Read-Only Root Filesystem
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      A read-only root file system helps enforce an immutable infrastructure strategy.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-read-only-root-filesystem
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - government-api
                - loan-validator-portal
                - observability
      validate:
        message: "Root filesystem must be read-only"
        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
