kyverno/policies/require-seccomp-profile.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-seccomp-profile
  annotations:
    policies.kyverno.io/title: Require Seccomp Profile
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Seccomp profile must be set to RuntimeDefault or Localhost.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-seccomp-profile
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - government-api
                - loan-validator-portal
                - observability
      validate:
        message: "Seccomp profile is required. Must be RuntimeDefault or Localhost"
        pattern:
          spec:
            securityContext:
              seccompProfile:
                type: "RuntimeDefault | Localhost"
